--- a/frontend/instachat/app.json
+++ b/frontend/instachat/app.json
@@ -21,7 +21,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.instachat"
+      "package": "com.anonymous.instachat",
+      "softwareKeyboardLayoutMode": "resize"
     },
     "web": {
       "favicon": "./assets/favicon.png"
