feat: improve backend controllers, sockets, stories, notifications, and frontend updates

--- a/frontend/instachat/app.json
+++ b/frontend/instachat/app.json
@@ -13,7 +13,12 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app uses the camera to take photos and videos for stories and posts.",
+        "NSMicrophoneUsageDescription": "This app uses the microphone to record videos with audio.",
+        "NSPhotoLibraryUsageDescription": "This app accesses your photo library to upload images and videos."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,13 +27,36 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.instachat",
-      "softwareKeyboardLayoutMode": "resize"
+      "softwareKeyboardLayoutMode": "resize",
+      "permissions": [
+        "CAMERA",
+        "RECORD_AUDIO",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "READ_MEDIA_IMAGES",
+        "READ_MEDIA_VIDEO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone for recording videos."
+        }
+      ],
+      "expo-video"
     ]
   }
 }
