--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^7.3.1",
     "helmet": "^7.2.0",
     "http-status": "^2.1.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.8.8",
     "morgan": "^1.10.1",
