--- a/frontend/instachat/package.json
+++ b/frontend/instachat/package.json
@@ -23,10 +23,12 @@
     "expo-file-system": "~19.0.21",
     "expo-font": "^14.0.10",
     "expo-image": "~3.0.11",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-media-library": "~18.2.1",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-video": "~3.0.15",
     "expo-video-thumbnails": "~10.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
