--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.13",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "winston": "^3.19.0"
